[Qt] Default sizes for input-text and text-area are different when running DRT/WTR https://bugs.webkit.org/show_bug.cgi?id=91990

Patch by Luciano Wolf <luciano.wolf@openbossa.org> on 2012-08-06
Reviewed by Kenneth Rohde Christiansen.

Source/WebKit2:

WTR wasn't using the proper font types provided by testfonts directory.
The same approach as DRT was applied and now it takes info from QFont to
update the store variable.

* UIProcess/qt/WebPreferencesQt.cpp:
(WebKit::setStringValueIfInUserDefaults):
(WebKit):
(WebKit::WebPreferences::platformInitializeStore):

Tools:

Initializing TestFonts information into WTR binary. Doing it
later leads to wrong font names usage (Dejavu Serif instead
of Liberation Serif).

* WebKitTestRunner/Target.pri:
* WebKitTestRunner/qt/main.cpp:
(main):

Canonical link: https://commits.webkit.org/111143@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124808 268f45cc-cd09-0410-ab3c-d52691b4dbfc