Source/WebKit2/UIProcess/qt/WebPreferencesQt.cpp
@@ -25,11 +25,39 @@
 
 #include "config.h"
 #include "WebPreferences.h"
+#include <QFont>
 
 namespace WebKit {
 
+static void setStringValueIfInUserDefaults(const String& baseKey, WebPreferencesStore& store, const QHash<String, QFont::StyleHint> qFontHint)
+{
+    // Use same approach as DumpRenderTree does - get font info from QFont.
+    static QFont defaultFont;
+    defaultFont.setStyleHint(qFontHint[baseKey]);
+    store.setStringValueForKey(baseKey, defaultFont.defaultFamily());
+}
+
 void WebPreferences::platformInitializeStore()
 {
+    if (!m_identifier)
+        return;
+
+    QHash <String, QFont::StyleHint> qFontHint;
+
+    qFontHint["StandardFontFamily"] = QFont::Serif;
+    qFontHint["CursiveFontFamily"] = QFont::Cursive;
+    qFontHint["FantasyFontFamily"] = QFont::Fantasy;
+    qFontHint["FixedFontFamily"] = QFont::Monospace;
+    qFontHint["SansSerifFontFamily"] = QFont::SansSerif;
+    qFontHint["SerifFontFamily"] = QFont::Serif;
+    qFontHint["PictographFontFamily"] = QFont::Serif;
+
+#define INITIALIZE_FONT_PREFERENCES(KeyUpper, KeyLower, TypeName, Type, DefaultValue) \
+    set##TypeName##ValueIfInUserDefaults(WebPreferencesKey::KeyLower##Key(), m_store, qFontHint);
+
+    FOR_EACH_WEBKIT_FONT_FAMILY_PREFERENCE(INITIALIZE_FONT_PREFERENCES)
+
+#undef INITIALIZE_FONT_PREFERENCES
 }
 
 void WebPreferences::platformUpdateStringValueForKey(const String&, const String&)
